<resources>
    <string name="app_name">Guardian News</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_news_update">No news update. Please try again later.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_page_size">Page size</string>
    <string name="settings_page_size_key">page_size</string>
    <string name="settings_page_size_default">10</string>

    <string name="settings_category_to_show">Category to show</string>
    <string name="settings_category_to_show_key">only_show</string>
    <string name="settings_category_to_show_default">none</string>

    <string name="settings_category_to_show_none_label">None</string>
    <string name="settings_category_to_show_none_value" translatable="false">none</string>

    <string name="settings_category_to_show_sport_label">Sport</string>
    <string name="settings_category_to_show_sport_value" translatable="false">sport</string>

    <string name="settings_category_to_show_football_label">Football</string>
    <string name="settings_category_to_show_football_value" translatable="false">football</string>

    <string name="settings_category_to_show_education_label">Education</string>
    <string name="settings_category_to_show_education_value" translatable="false">education</string>

    <string name="settings_category_to_show_technology_label">Technology</string>
    <string name="settings_category_to_show_technology_value" translatable="false">technology</string>

    <string name="settings_category_to_show_society_label">Society</string>
    <string name="settings_category_to_show_society_value" translatable="false">society</string>

    <string name="settings_category_to_show_business_label">Business</string>
    <string name="settings_category_to_show_business_value" translatable="false">business</string>

    <string name="settings_category_to_show_environment_label">Environment</string>
    <string name="settings_category_to_show_environment_value" translatable="false">environment</string>

</resources>
