<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size" />

    <!--List allows user to choose the topic-->
    <ListPreference
        android:defaultValue="@string/settings_category_to_show_default"
        android:entries="@array/settings_category_to_show_labels"
        android:entryValues="@array/settings_category_to_show_values"
        android:key="@string/settings_category_to_show_key"
        android:title="@string/settings_category_to_show" />
</PreferenceScreen>